Creating function to set some collections instead of passing them through parameters